Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -19,10 +19,12 @@ Method pop() untuk menghapus element terakhir dari sebuah array, sedangkan push(
 > Popping | Menghapus element terakhir ("Mango") dari variable fruits
 ```js
 let fruits = ["Banana", "Orange", "Apple", "Mango"];
-fruits.pop();              
+fruits.pop();      
+console.log(fruits);
 ```
 > Pushing | Menambahkan element baru ke array ("akhir")
 ```js
 let fruits = ["Banana", "Orange", "Apple", "Mango"];
-fruits.pop();              
+fruits.pop();       
+console.log(fruits);
 ```
