--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -25,6 +25,13 @@ console.log(fruits);
 > Pushing | Menambahkan element baru ke array ("akhir")
 ```js
 let fruits = ["Banana", "Orange", "Apple", "Mango"];
-fruits.pop();       
+fruits.push("Jambu");       
 console.log(fruits);
+
+contoh dengan spread operator
+let arr = ["apple", "jeruk", "pisang", "mangga"];
+let arr2 = ["buku, sepatu, baju"];
+arr.push(...arr2);
+console.log(arr);
+//hasil = ["apple", "jeruk", "pisang", "mangga", "buku, sepatu, baju"]
 ```
