Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -15,14 +15,12 @@ Hasilnya di halaman html adalah = Banana,Orange,Apple,Mango
 
 Saat bekerja dengan Array, sangat mudah menghapus dan menambahkan element baru array. yaitu dengan methods pop() dan push().
 
-Method pop() untuk menghapus element terakhir dari sebuah array, sedangkan push() untuk memasukan element baru kedalam array (baris akhir).
-> Popping | Menghapus element terakhir ("Mango") dari variable fruits
+Method pop() untuk menghapus element terakhir dari sebuah array, sedangkan push() untuk memasukan element baru kedalam array (pada baris akhir).
 ```
 let fruits = ["Banana", "Orange", "Apple", "Mango"];
 fruits.pop();      
 console.log(fruits);
 ```
-> Pushing | Menambahkan element baru ke array ("akhir")
 ```
 let fruits = ["Banana", "Orange", "Apple", "Mango"];
 fruits.push("Jambu");       
@@ -34,4 +32,16 @@ let arr2 = ["buku, sepatu, baju"];
 arr.push(...arr2);
 console.log(arr);
 //hasil = ["apple", "jeruk", "pisang", "mangga", "buku, sepatu, baju"]
+```
+
+3. Shift dan Unshift
+
+Method ini mirip dengan pop(), pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
+
+Method ini akan menghapus data yang terletak pada awal array. method ini tidak menerima parameter apapun. Method ini mengambil
+```
+let arr = ["apple", "jeruk", "pisang", "mangga"];
+let shifting = arr.shift();
+console.log(arr); //"jeruk", "pisang", "mangga"
+console.log(shifting); //apple
 ```
