Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -38,7 +38,7 @@ console.log(arr);
 
 Method ini mirip dengan pop(), pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
 
-Method ini akan menghapus data yang terletak pada awal array. method ini tidak menerima parameter apapun. Method ini mengambil
+Method ini akan menghapus data yang terletak pada awal array. method ini tidak menerima parameter apapun.
 ```
 let arr = ["apple", "jeruk", "pisang", "mangga"];
 let shifting = arr.shift();
