Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -16,22 +16,27 @@ Hasilnya di halaman html adalah = Banana,Orange,Apple,Mango
 Saat bekerja dengan Array, sangat mudah menghapus dan menambahkan element baru array. yaitu dengan methods pop() dan push().
 
 Method pop() untuk menghapus element terakhir dari sebuah array, sedangkan push() untuk memasukan element baru kedalam array (pada baris akhir).
-```
-let fruits = ["Banana", "Orange", "Apple", "Mango"];
-fruits.pop();      
-console.log(fruits);
-```
-```
-let fruits = ["Banana", "Orange", "Apple", "Mango"];
-fruits.push("Jambu");       
-console.log(fruits);
 
-contoh dengan spread operator
-let arr = ["apple", "jeruk", "pisang", "mangga"];
-let arr2 = ["buku, sepatu, baju"];
-arr.push(...arr2);
-console.log(arr);
-//hasil = ["apple", "jeruk", "pisang", "mangga", "buku, sepatu, baju"]
+- contoh method pop()
+```
+  let fruits = ["Banana", "Orange", "Apple", "Mango"];
+  let pop = fruits.pop();
+  console.log(fruits);
+  console.log(pop);
+```
+- contoh method push()
+```
+  let fruits = ["Banana", "Orange", "Apple", "Mango"];
+  fruits.push("Jambu");       
+  console.log(fruits);
+```
+- contoh method push() dengan spread operator
+```
+  let arr = ["apple", "jeruk", "pisang", "mangga"];
+  let arr2 = ["buku, sepatu, baju"];
+  arr.push(...arr2);
+  console.log(arr);
+  //hasil = ["apple", "jeruk", "pisang", "mangga", "buku, sepatu, baju"]
 ```
 
 3. Shift dan Unshift
@@ -39,9 +44,11 @@ console.log(arr);
 Method ini mirip dengan pop(), pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
 
 Method ini akan menghapus data yang terletak pada awal array. method ini tidak menerima parameter apapun.
+
+- contoh method shift()
 ```
-let arr = ["apple", "jeruk", "pisang", "mangga"];
-let shifting = arr.shift();
-console.log(arr); //"jeruk", "pisang", "mangga"
-console.log(shifting); //apple
+  let arr = ["apple", "jeruk", "pisang", "mangga"];
+  let shifting = arr.shift();
+  console.log(arr); //"jeruk", "pisang", "mangga"
+  console.log(shifting); //apple
 ```
