Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -2,7 +2,7 @@
 
 1. Converting Arrays to Strings
 
-Method Javascript toString() digunakan untuk mengconvert sebuah nilai array ke dalam sebuah string dengan pembatas koma (,)
+Method Javascript toString() digunakan untuk mengconvert sebuah nilai array ke dalam sebuah baris string dengan pembatas koma (,)
 ```
 Contoh: 
 let fruits = ["Banana", "Orange", "Apple", "Mango"];
