Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -15,22 +15,22 @@ Hasilnya di halaman html adalah = Banana,Orange,Apple,Mango
 
 Saat bekerja dengan Array, sangat mudah menghapus dan menambahkan element baru array. yaitu dengan methods pop() dan push().
 
-Method pop() untuk menghapus element terakhir dari sebuah array, sedangkan push() untuk memasukan element baru kedalam array (pada baris akhir).
+Method pop() untuk menghapus element terakhir dari sebuah array dan return nilainya, sedangkan push() untuk memasukan element baru kedalam array (pada baris akhir).
 
 - contoh method pop()
 ```
   let fruits = ["Banana", "Orange", "Apple", "Mango"];
   let pop = fruits.pop();
-  console.log(fruits);
-  console.log(pop);
+  console.log(fruits); //["Banana", "Orange", "Apple"]
+  console.log(pop); //Mango
 ```
-- contoh method push()
+- contoh method push("element")
 ```
   let fruits = ["Banana", "Orange", "Apple", "Mango"];
   fruits.push("Jambu");       
-  console.log(fruits);
+  console.log(fruits); //["Banana", "Orange", "Apple", "Mango", "Jambu"]
 ```
-- contoh method push() dengan spread operator
+- contoh method push("element") dengan spread operator
 ```
   let arr = ["apple", "jeruk", "pisang", "mangga"];
   let arr2 = ["buku, sepatu, baju"];
@@ -41,14 +41,26 @@ Method pop() untuk menghapus element terakhir dari sebuah array, sedangkan push(
 
 3. Shift dan Unshift
 
-Method ini mirip dengan pop(), pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
+Method shift() mirip dengan pop(), jika pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
 
-Method ini akan menghapus data yang terletak pada awal array. method ini tidak menerima parameter apapun.
+sama seperti pop(), method ini tidak menerima parameter apapun.
 
 - contoh method shift()
 ```
   let arr = ["apple", "jeruk", "pisang", "mangga"];
   let shifting = arr.shift();
-  console.log(arr); //"jeruk", "pisang", "mangga"
+  console.log(arr); //["jeruk", "pisang", "mangga"]
   console.log(shifting); //apple
 ```
+Sedangkan method unshift() adalah sama juga seperti method push(), unshift() akan menambah satu atau lebih elemen ke dalam suatu array.
+
+Method ini menambahkannya ke awal array, dalam dunia komputer sering disebut sebagai prepend. Setelah menambahkan elemen ke depan array, method unshift() akan menambahkan jumlah baru array yang sudah berubah.
+
+- contoh method unshift("element");
+```
+let fruits = ["Banana", "Orange", "Apple", "Mango"];
+let unshift = fruits.unshift("First Fruit");
+console.log(fruits); //["First Fruit", "Banana", "Orange", "Apple", "Mango"]
+console.log(unshift); // 5
+```
+
