Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -54,7 +54,7 @@ sama seperti pop(), method ini tidak menerima parameter apapun.
 ```
 Sedangkan method unshift() adalah sama juga seperti method push(), unshift() akan menambah satu atau lebih elemen ke dalam suatu array.
 
-Method ini menambahkannya ke awal array, dalam dunia komputer sering disebut sebagai prepend. Setelah menambahkan elemen ke depan array, method unshift() akan menambahkan jumlah baru array yang sudah berubah.
+Method ini menambahkannya ke awal array, dalam dunia komputer sering disebut sebagai prepend. Setelah menambahkan elemen ke depan array, method unshift() akan melakukan return jumlah element pada array.
 
 - contoh method unshift("element");
 ```
