Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -1,5 +1,10 @@
 ### JavaScript Array Methods
 
+`Daftar isi :` 
+- toString()
+- pop() dan push()
+- shift() dan unshift()
+
 1. Converting Arrays to Strings
 
 Method Javascript toString() digunakan untuk mengconvert sebuah nilai array ke dalam sebuah baris string dengan pembatas koma (,)
