Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -16,7 +16,7 @@ document.getElementById("demo").innerHTML = fruits.toString();
 Hasilnya di halaman html adalah = Banana,Orange,Apple,Mango
 ```
 
-2. Popping and Pushing
+2. `Popping and Pushing`
 
 Saat bekerja dengan Array, sangat mudah menghapus dan menambahkan element baru array. yaitu dengan methods pop() dan push().
 
@@ -44,7 +44,7 @@ Method pop() untuk menghapus element terakhir dari sebuah array dan return nilai
   //hasil = ["apple", "jeruk", "pisang", "mangga", "buku, sepatu, baju"]
 ```
 
-3. Shift dan Unshift
+3. `Shift dan Unshift`
 
 Method shift() mirip dengan pop(), jika pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
 
