--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -5,7 +5,7 @@
 - pop() dan push()
 - shift() dan unshift()
 
-1. `Converting Arrays to Strings`
+1. `Converting Arrays kedalam Strings`
 
 Method Javascript toString() digunakan untuk mengconvert sebuah nilai array ke dalam sebuah baris string dengan pembatas koma (,)
 ```js
