Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -10,10 +10,11 @@
 Method Javascript toString() digunakan untuk mengconvert sebuah nilai array ke dalam sebuah baris string dengan pembatas koma (,)
 ```js
 Contoh: 
-let fruits = ["Banana", "Orange", "Apple", "Mango"];
-document.getElementById("demo").innerHTML = fruits.toString();
+  let fruits = ["Banana", "Orange", "Apple", "Mango"];
+  let tostring = fruits.toString();
+  console.log(fruits); // ["Banana", "Orange", "Apple", "Mango"]
+  console.log(tostring); // Banana,Orange,Apple,Mango
 
-Hasilnya di halaman html adalah = Banana,Orange,Apple,Mango
 ```
 
 2. `Popping and Pushing`
