Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -49,7 +49,7 @@ Method pop() untuk menghapus element terakhir dari sebuah array dan return nilai
 
 Method shift() mirip dengan pop(), jika pop untuk menghapus element akhir, sedangkan shift() menghapus element awal array dan mengembalikan nilai yang dihapus.
 
-sama seperti pop(), method ini tidak menerima parameter apapun.
+sama seperti pop(), method shift() tidak menerima parameter apapun.
 
 - contoh method shift()
 ```js
@@ -60,7 +60,7 @@ sama seperti pop(), method ini tidak menerima parameter apapun.
 ```
 Sedangkan method unshift() adalah sama juga seperti method push(), unshift() akan menambah satu atau lebih elemen ke dalam suatu array.
 
-Method ini menambahkannya ke awal array, dalam dunia komputer sering disebut sebagai prepend. Setelah menambahkan elemen ke depan array, method unshift() akan melakukan return jumlah element pada array.
+Method shift() menambahkannya ke awal array, dalam dunia komputer sering disebut sebagai prepend. Setelah menambahkan elemen ke depan array, method unshift() akan melakukan return jumlah element pada array.
 
 - contoh method unshift("element");
 ```js
