Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -4,6 +4,7 @@
 - toString( )
 - pop( ) dan push( )
 - shift( ) dan unshift( )
+- find( )
 
 1. `Converting Arrays ke dalam Strings`
 
@@ -70,3 +71,17 @@ console.log(fruits); //["First Fruit", "Banana", "Orange", "Apple", "Mango"]
 console.log(unshift); // 5
 ```
 
+4. `find ( )`
+
+Method find( ) digunakan untuk mencari single element didalam array
+
+```
+let ages = [3, 10, 18, 20, 25];
+
+//Mengembalikan nilai 18,20,25
+function checkAdult(age) {
+  return age >= 18;
+}
+
+console.log( ages.find(checkAdult) ) //18
+```
