Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -5,6 +5,7 @@
 - pop( ) dan push( )
 - shift( ) dan unshift( )
 - find( )
+- filter ( )
 
 1. `Converting Arrays ke dalam Strings`
 
@@ -73,7 +74,7 @@ console.log(unshift); // 5
 
 4. `find ( )`
 
-Method find( ) digunakan untuk mencari single element didalam array
+Method find( ) digunakan untuk mencari single element didalam array. Juga bisa digunakan untuk mencari single object didalam array object.
 
 ```js
 let ages = [3, 10, 18, 20, 25];
@@ -85,3 +86,38 @@ function checkAdult(age) {
 
 console.log( ages.find(checkAdult) ) //18
 ```
+Contoh find( ) pada Array Object: 
+```js
+let users = [
+    {
+      id: 1,
+      name: "fajar",
+    },
+    {
+      id: 2,
+      name: "bogi",
+    },
+    {
+      id: 3,
+      name: "danang",
+    }]
+    
+let result = users.find((user) => user.id == 1); 
+console.log(result); // {id:1, name:"fajar"}
+```
+
+5. `filter ( )`
+
+Fungsi filter() membuat array baru berisi elemen yang lolos pengecekan di dalam fungsi anonim yang dikirim sebagai parameter. Mengembalikan nilai berupa Array juga. Jika find( ) mengembalikan single element, sedangkan filter( ) bernilai array.
+
+```
+let words = ["spray", "limit", "elite", "exuberant", "destruction", "present"];
+
+//mencari kata diatas 6 huruf
+let longWords = words.filter(function(word){
+  return word.length > 6;
+});
+
+// Filtered array longWords is ["exuberant", "destruction", "present"]
+```
+> refrensi : https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter
