Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -5,7 +5,7 @@
 - pop( ) dan push( )
 - shift( ) dan unshift( )
 - find( )
-- filter ( )
+- filter( )
 
 1. `Converting Arrays ke dalam Strings`
 
@@ -71,6 +71,7 @@ let unshift = fruits.unshift("First Fruit");
 console.log(fruits); //["First Fruit", "Banana", "Orange", "Apple", "Mango"]
 console.log(unshift); // 5
 ```
+> refrensi : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/shift#
 
 4. `find ( )`
 
@@ -105,13 +106,14 @@ let users = [
 let result = users.find((user) => user.id == 1); 
 console.log(result); // {id:1, name:"fajar"}
 ```
+> refrensi : https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/find
 
-5. `filter ( )`
+5. `filter( )`
 
 Fungsi filter() membuat array baru berisi elemen yang lolos pengecekan di dalam fungsi anonim yang dikirim sebagai parameter. Mengembalikan nilai berupa Array juga. Jika find( ) mengembalikan single element, sedangkan filter( ) bernilai array.
 
 ```js
-let words = ["spray", "limit", "elite", "exuberant", "destruction", "present"];
+ let words = ["spray", "limit", "elite", "exuberant", "destruction", "present"];
 
 //mencari kata diatas 6 huruf
 let longWords = words.filter(function(word){
