Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -106,7 +106,7 @@ let users = [
 let result = users.find((user) => user.id == 1); 
 console.log(result); // {id:1, name:"fajar"}
 ```
-> refrensi : https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/find
+> [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/find).
 
 5. `filter( )`
 
@@ -122,4 +122,4 @@ let longWords = words.filter(function(word){
 
 // Filtered array longWords is ["exuberant", "destruction", "present"]
 ```
-> refrensi : https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter
+> [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter).
