Update 1. Array Method.md

--- a/1. Array Method.md
+++ b/1. Array Method.md
@@ -71,7 +71,9 @@ let unshift = fruits.unshift("First Fruit");
 console.log(fruits); //["First Fruit", "Banana", "Orange", "Apple", "Mango"]
 console.log(unshift); // 5
 ```
-> refrensi : https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/shift#
+
+> [Refrensi Mozilla](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Array/shift#).
+
 
 4. `find( )`
 
