Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -1,1 +1,60 @@
+### JavaScript Higher-order Function
 
+Higher Order Function adalah Function yang beroperasi pada function yang lain (function dalam function). Baik itu digunakan dalam argument, maupun sebagai return value.
+
+`Daftar isi :` 
+- find( )
+- filter( )
+
+
+
+1. `find( )`
+
+Method find( ) digunakan untuk mencari single element didalam array. Juga bisa digunakan untuk mencari single object didalam array object.
+
+```js
+let ages = [3, 10, 18, 20, 25];
+
+//Mengembalikan nilai 18,20,25
+function checkAdult(age) {
+  return age >= 18;
+}
+
+console.log( ages.find(checkAdult) ) //18
+```
+Contoh find( ) pada Array Object: 
+```js
+let users = [
+    {
+      id: 1,
+      name: "foo",
+    },
+    {
+      id: 2,
+      name: "doe",
+    },
+    {
+      id: 3,
+      name: "john",
+    }]
+    
+let result = users.find((user) => user.id == 1); 
+console.log(result); // {id:1, name:"foo"}
+```
+> [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/find).
+
+2. `filter( )`
+
+Fungsi filter() membuat array baru berisi elemen yang lolos pengecekan di dalam fungsi anonim yang dikirim sebagai parameter. Mengembalikan nilai berupa Array juga. Jika find( ) mengembalikan single element, sedangkan filter( ) bernilai array.
+
+```js
+ let words = ["spray", "limit", "elite", "exuberant", "destruction", "present"];
+
+//mencari kata diatas 6 huruf
+let longWords = words.filter(function(word){
+  return word.length > 6;
+});
+
+// Filtered array longWords is ["exuberant", "destruction", "present"]
+```
+> [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter).
