--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -2,6 +2,24 @@
 
 Higher Order Function adalah Function yang beroperasi pada function yang lain (function dalam function). Baik itu digunakan dalam argument, maupun sebagai return value.
 
+contoh Higher Order Function :
+```js
+
+  <button onclick="greet('Fajar', hallo)">Click</button>
+
+  <script>
+    function greet(name, hallo) {
+      console.log("hallo " + name);
+      hallo(name);
+    }
+
+    function hallo(name) {
+      alert("hallo " + name);
+    }
+
+  </script>
+```
+
 `Daftar isi :` 
 - find( )
 - filter( )
