Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -8,6 +8,8 @@ contoh Higher Order Function :
   <button onclick="greet('Fajar', hallo)">Click</button>
 
   <script>
+    //greet() adalah higher order function
+    
     function greet(name, hallo) {
       console.log("hallo " + name);
       hallo(name);
