Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -3,7 +3,7 @@
 Higher Order Function adalah Function yang beroperasi pada function yang lain (function dalam function). Baik itu digunakan dalam argument, maupun sebagai return value.
 
 contoh Higher Order Function :
-```js
+```html
 
   <button onclick="greet('Fajar', hallo)">Click</button>
 
