Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -9,7 +9,7 @@ contoh Higher Order Function :
 
   <script>
     //greet() adalah higher order function
-    //hallo pada parameter greet disebut callback
+    //hallo pada argument greet disebut callback
     
     function greet(name, hallo) {
       console.log("hallo " + name);
