Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -23,6 +23,20 @@ contoh Higher Order Function :
   </script>
 ```
 
+```js
+  setTimetout(function() {
+      console.log('Hello World');
+  ), 3000 }
+```
+
+```js
+  let button = document.querySelector('#input');
+  
+  button.addEventListener( 'click', function() {
+      console.log('button pressed');
+  });
+```
+
 `Daftar isi :` 
 - find( )
 - filter( )
