Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -2,6 +2,8 @@
 
 Higher Order Function adalah Function yang beroperasi pada function yang lain (function dalam function). Baik itu digunakan dalam argument, maupun sebagai return value.
 
+Mempelajari higher-order function sangat penting sebagai basic dasar dari paradigma functional programming.
+
 contoh Higher Order Function :
 ```html
 
