Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -7,22 +7,19 @@ Mempelajari higher-order function sangat penting sebagai basic dasar dari paradi
 contoh Higher Order Function :
 ```html
 
-  <button onclick="greet('Fajar', hallo)">Click</button>
+    <button onclick="greet('Fajar', hallo)">Click</button>
 
-  <script>
-    //greet() adalah higher order function
-    //hallo pada argument greet disebut callback
-    
-    function greet(name, hallo) {
-      console.log("hallo " + name);
-      hallo(name);
-    }
+    <script>
+      function greet(name, callback) {
+        console.log("hallo " + name);
+        callback(name);
+      }
 
-    function hallo(name) {
-      alert("hallo " + name);
-    }
+      function hallo(name) {
+        alert("hallo " + name);
+      }
+    </script>
 
-  </script>
 ```
 
 ```js
