Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -6,6 +6,20 @@ Mempelajari higher-order function sangat penting sebagai basic dasar dari paradi
 
 contoh Higher Order Function :
 ```html
+    <script>
+      function salam(waktu) {
+        return function (nama) {
+          console.log(`Selamat ${waktu}, ${nama}`);
+        };
+      }
+
+      let selamatPagi = salam("Pagi");
+
+      selamatPagi("Fajar");
+    </script>
+```
+
+```html
 
     <button onclick="greet('Fajar', hallo)">Click</button>
 
