Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -18,6 +18,21 @@ contoh Higher Order Function :
       selamatPagi("Fajar");
     </script>
 ```
+Atau Dengan Arrow Function : 
+
+```js
+    <script>
+      let salam = (waktu) => (nama) => {
+        console.log(`Selamat ${waktu}, ${nama}`);
+      };
+
+      let selamat = salam("pagi");
+
+      selamat("fajar");
+    </script>
+```
+
+
 
 ```html
 
