Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -32,7 +32,30 @@ Atau Dengan Arrow Function :
     </script>
 ```
 
+```html
+    <script>
+      //Basic
+      for (let i = 0; i < 10; i++) {
+        console.log(i);
+      }
 
+      //for + function
+      function repeatLog(n) {
+        for (let i = 0; i < n; i++) {
+          console.log(i);
+        }
+      }
+
+      //highorder function
+      function repeat(n, action) {
+        for (let i = 0; i < n; i++) {
+          action(i);
+        }
+      }
+      repeat(100, console.log);
+      repeat(5, alert);
+    </script>
+```
 
 ```html
 
