Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -31,7 +31,7 @@ Atau Dengan Arrow Function :
       selamat("fajar");
     </script>
 ```
-
+Contoh lain:
 ```html
     <script>
       //Basic
@@ -56,7 +56,7 @@ Atau Dengan Arrow Function :
       repeat(5, alert);
     </script>
 ```
-
+Contoh lain:
 ```html
 
     <button onclick="greet('Fajar', hallo)">Click</button>
@@ -73,13 +73,13 @@ Atau Dengan Arrow Function :
     </script>
 
 ```
-
+Contoh lain:
 ```js
   setTimetout(function() {
       console.log('Hello World');
   ), 3000 }
 ```
-
+Contoh lain:
 ```js
   let button = document.querySelector('#input');
   
