Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -6,78 +6,78 @@ Mempelajari higher-order function sangat penting sebagai basic dasar dari paradi
 
 contoh Higher Order Function :
 ```html
-    <script>
-      function salam(waktu) {
-        return function (nama) {
-          console.log(`Selamat ${waktu}, ${nama}`);
-        };
-      }
+<script>
+  function salam(waktu) {
+    return function (nama) {
+      console.log(`Selamat ${waktu}, ${nama}`);
+    };
+  }
 
-      let selamatPagi = salam("Pagi");
+  let selamatPagi = salam("Pagi");
 
-      selamatPagi("Fajar");
-    </script>
+  selamatPagi("Fajar");
+</script>
 ```
 Atau Dengan Arrow Function : 
 
 ```js
-    <script>
-      let salam = (waktu) => (nama) => {
-        console.log(`Selamat ${waktu}, ${nama}`);
-      };
+<script>
+  let salam = (waktu) => (nama) => {
+    console.log(`Selamat ${waktu}, ${nama}`);
+  };
 
-      let selamat = salam("pagi");
+  let selamat = salam("pagi");
 
-      selamat("fajar");
-    </script>
+  selamat("fajar");
+</script>
 ```
 Contoh lain:
 ```html
-    <script>
-      //Basic
-      for (let i = 0; i < 10; i++) {
-        console.log(i);
-      }
+<script>
+  //Basic
+  for (let i = 0; i < 10; i++) {
+    console.log(i);
+  }
 
-      //for + function
-      function repeatLog(n) {
-        for (let i = 0; i < n; i++) {
-          console.log(i);
-        }
-      }
+  //for + function
+  function repeatLog(n) {
+    for (let i = 0; i < n; i++) {
+      console.log(i);
+    }
+  }
 
-      //highorder function
-      function repeat(n, action) {
-        for (let i = 0; i < n; i++) {
-          action(i);
-        }
-      }
-      repeat(100, console.log);
-      repeat(5, alert);
-    </script>
+  //highorder function
+  function repeat(n, action) {
+    for (let i = 0; i < n; i++) {
+      action(i);
+    }
+  }
+  repeat(100, console.log);
+  repeat(5, alert);
+</script>
 ```
 Contoh lain:
 ```html
 
-    <button onclick="greet('Fajar', hallo)">Click</button>
+<button onclick="greet('Fajar', hallo)">Click</button>
 
-    <script>
-      function greet(name, callback) {
-        console.log("hallo " + name);
-        callback(name);
-      }
+<script>
+  function greet(name, callback) {
+    console.log("hallo " + name);
+    callback(name);
+  }
 
-      function hallo(name) {
-        alert("hallo " + name);
-      }
-    </script>
+  function hallo(name) {
+    alert("hallo " + name);
+  }
+</script>
 
 ```
 Contoh lain:
 ```js
-  setTimetout(function() {
-      console.log('Hello World');
-  ), 3000 }
+setTimetout(function() {
+  console.log('Hello World');
+), 3000 }
 ```
 Contoh lain:
 ```js
@@ -110,19 +110,21 @@ console.log( ages.find(checkAdult) ) //18
 ```
 Contoh find( ) pada Array Object: 
 ```js
-let users = [
-    {
-      id: 1,
-      name: "foo",
-    },
-    {
-      id: 2,
-      name: "doe",
-    },
-    {
-      id: 3,
-      name: "john",
-    }]
+let users = 
+[
+{
+  id: 1,
+  name: "foo",
+},
+{
+  id: 2,
+  name: "doe",
+},
+{
+  id: 3,
+  name: "john",
+}
+]
     
 let result = users.find((user) => user.id == 1); 
 console.log(result); // {id:1, name:"foo"}
