Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -146,3 +146,45 @@ let longWords = words.filter(function(word){
 // Filtered array longWords is ["exuberant", "destruction", "present"]
 ```
 > [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter).
+
+2. `reduce( )`
+
+Reduce biasa digunakan untuk : Mengakumulasikan atau mengurangi nilai berdasarkan elemen di dalam array.
+
+Contoh : Menjumlahkan penduduk Bali dari tiap kabupaten/kota pada tahun 2014
+
+```js
+var bali = [
+	{ regency:'Jembrana', population:114863 },
+	{ regency:'Tabanan', population:209308 },
+	{ regency:'Badung', population:277536 },
+	{ regency:'Gianyar', population:208443 },
+	{ regency:'Klungkung', population:79233 },
+	{ regency:'Bangli', population:106166 },
+	{ regency:'Karangasem', population:193787 },
+	{ regency:'Buleleng', population:294418 },
+	{ regency:'Denpasar', population:403292 }
+];
+
+var sum = bali.reduce(function(val, element) {
+	return val + element.population;
+}, 0);
+
+atau dengan arrow function
+
+var sum = bali.reduce((val, element) => {
+  return val + element.population;
+}, 0);
+
+console.log(sum) // 1887046 jumlah population
+```
+
+```js
+const num = [1, 2, 3];
+
+let total = num.reduce((initial, current) => {
+  return initial + current;
+}, 0);
+
+console.log(total); //6
+```
