Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -1,5 +1,10 @@
 ### JavaScript Higher-order Function
 
+`Daftar isi :` 
+- find( )
+- filter( )
+- reduce( )
+
 Higher Order Function adalah Function yang beroperasi pada function yang lain (function dalam function). Baik itu digunakan dalam argument, maupun sebagai return value.
 
 Mempelajari higher-order function sangat penting sebagai basic dasar dari paradigma functional programming.
@@ -88,9 +93,7 @@ Contoh lain:
   });
 ```
 
-`Daftar isi :` 
-- find( )
-- filter( )
+
 
 
 
@@ -147,7 +150,7 @@ let longWords = words.filter(function(word){
 ```
 > [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter).
 
-2. `reduce( )`
+3. `reduce( )`
 
 Reduce biasa digunakan untuk : Mengakumulasikan atau mengurangi nilai berdasarkan elemen di dalam array.
 
