Update 2. Higher-order Function.md

--- a/2. Higher-order Function.md
+++ b/2. Higher-order Function.md
@@ -9,7 +9,7 @@ Higher Order Function adalah Function yang beroperasi pada function yang lain (f
 
 Mempelajari higher-order function sangat penting sebagai basic dasar dari paradigma functional programming.
 
-contoh Higher Order Function :
+### contoh Higher Order Function :
 ```html
 <script>
   function salam(waktu) {
@@ -23,7 +23,7 @@ contoh Higher Order Function :
   selamatPagi("Fajar");
 </script>
 ```
-Atau Dengan Arrow Function : 
+### Atau Dengan Arrow Function : 
 
 ```js
 <script>
@@ -36,7 +36,7 @@ Atau Dengan Arrow Function :
   selamat("fajar");
 </script>
 ```
-Contoh lain:
+### Contoh lain:
 ```html
 <script>
   //Basic
@@ -61,7 +61,7 @@ Contoh lain:
   repeat(5, alert);
 </script>
 ```
-Contoh lain:
+### Contoh lain:
 ```html
 
 <button onclick="greet('Fajar', hallo)">Click</button>
@@ -78,13 +78,13 @@ Contoh lain:
 </script>
 
 ```
-Contoh lain:
+### Contoh lain:
 ```js
 setTimetout(function() {
   console.log('Hello World');
 ), 3000 }
 ```
-Contoh lain:
+### Contoh lain:
 ```js
   let button = document.querySelector('#input');
   
@@ -93,11 +93,7 @@ Contoh lain:
   });
 ```
 
-
-
-
-
-1. `find( )` 
+## 1. `find( )` 
 
 Method find( ) digunakan untuk mencari single element didalam array. Juga bisa digunakan untuk mencari single object didalam array object.
 
@@ -134,7 +130,7 @@ console.log(result); // {id:1, name:"foo"}
 ```
 > [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/find).
 
-2. `filter( )`
+## 2. `filter( )`
 
 Fungsi filter() membuat array baru berisi elemen yang lolos pengecekan di dalam fungsi anonim yang dikirim sebagai parameter. Mengembalikan nilai berupa Array juga. Jika find( ) mengembalikan single element, sedangkan filter( ) bernilai array.
 
@@ -150,7 +146,7 @@ let longWords = words.filter(function(word){
 ```
 > [Refrensi Mozilla](https://developer.mozilla.org/id/docs/Web/JavaScript/Reference/Global_Objects/Array/filter).
 
-3. `reduce( )`
+## 3. `reduce( )`
 
 Reduce biasa digunakan untuk : Mengakumulasikan atau mengurangi nilai berdasarkan elemen di dalam array.
 
