--- a/3. Callback.md
+++ b/3. Callback.md
@@ -44,8 +44,13 @@ console.log(input);
 contoh lain : 
 ```js
 function user(name, greeting, callback) {
-  return callback(name, greeting)
+  callback(name, greeting)
 }
 
 user("tono", "hallo ", (name, greeting) => console.log(greeting + name)) //hallo tono
+
+//versi arrow function
+
+let user = (name, greeting, callback) => callback(name, greeting);
+user("tono", "hallo ", (name, greeting) => console.log(greeting + name))
 ```
