--- a/3. Callback.md
+++ b/3. Callback.md
@@ -54,3 +54,17 @@ user("tono", "hallo ", (name, greeting) => console.log(greeting + name)) //hallo
 let user = (name, greeting, callback) => callback(name, greeting);
 user("tono", "hallo ", (name, greeting) => console.log(greeting + name))
 ```
+
+## Contoh Callback Dalam Fetch data API
+
+```js
+// success dan error adalah callback function
+function getPost(success, error) {
+    let response = fetch('https://jsodnplaceholder.typicode.com/posts')
+        .then(response => response.json())
+        .then(json => success(json))
+        .catch((msg) => {
+            error(msg);
+        });
+}
+getPost((response) => console.log(response), (msg) => console.log(msg));
