--- a/3. Callback.md
+++ b/3. Callback.md
@@ -60,7 +60,7 @@ user("tono", "hallo ", (name, greeting) => console.log(greeting + name))
 ```js
 // success dan error adalah callback function
 function getPost(success, error) {
-    let response = fetch('https://jsodnplaceholder.typicode.com/posts')
+    let response = fetch('https://jsonplaceholder.typicode.com/posts')
         .then(response => response.json())
         .then(json => success(json))
         .catch((msg) => {
