--- a/4. Closure.md
+++ b/4. Closure.md
@@ -35,6 +35,6 @@ function closures() {
 }
 let myfunc = closures();
 let submyfunc = myfunc;
-myfunc();
-submyfunc();
+myfunc(); //tono
+submyfunc(); //tono
 ```
