--- a/4. Closure.md
+++ b/4. Closure.md
@@ -4,6 +4,12 @@ Closure adalah fungsi yang merujuk kepada variabel yang mandiri (bebas).
 
 Dengan kata lain, fungsi yang di definisikan di dalam closure 'mengingat' lingkungan dimana closure ini didefinisikan. 
 
+Alasan menggunakan closure: 
+1. Untuk menggunakan function factory
+2. Untuk membuat private method
+
+> Tips: function yang berada didalam function harus di return;
+
 Lihat contoh berikut:
 
 ```js
@@ -37,4 +43,16 @@ let myfunc = closures();
 let submyfunc = myfunc;
 myfunc(); //tono
 submyfunc(); //tono
+```
+
+Contoh Realworld :
+```js
+function salam(waktu) {
+  return function name(name) {
+    console.log(`Hallo ${name}, selamat ${waktu}`);
+  };
+}
+
+let ucapkansalam = salam("pagi");
+ucapkansalam("Tono");
 ```
