--- a/4. Closure.md
+++ b/4. Closure.md
@@ -56,3 +56,13 @@ function salam(waktu) {
 let ucapkansalam = salam("pagi");
 ucapkansalam("Tono");
 ```
+atau bisa langsung dipanggil tanpa memasukkan kedalam variabel :
+```js
+function salam(waktu) {
+  return function name(name) {
+    console.log(`Hallo ${name}, selamat ${waktu}`);
+  };
+}
+
+salam("pagi")("tono");
+```
