--- a/4. Closure.md
+++ b/4. Closure.md
@@ -59,10 +59,11 @@ ucapkansalam("Tono");
 atau bisa langsung dipanggil tanpa memasukkan kedalam variabel :
 ```js
 function salam(waktu) {
+  console.log("awal function salam"); // dieksekusi
   return function name(name) {
     console.log(`Hallo ${name}, selamat ${waktu}`);
   };
+  console.log("akhir function salam"); // tidak dieksekusi
 }
-
-salam("pagi")("tono");
+salam("pagi")("fajar");
 ```
