--- a/4. Closure.md
+++ b/4. Closure.md
@@ -65,5 +65,5 @@ function salam(waktu) {
   };
   console.log("akhir function salam"); // tidak dieksekusi
 }
-salam("pagi")("fajar");
+salam("pagi")("tono"); //Hallo tono, selamat pagi
 ```
