--- a/4. Closure.md
+++ b/4. Closure.md
@@ -67,3 +67,10 @@ function salam(waktu) {
 }
 salam("pagi")("tono"); //Hallo tono, selamat pagi
 ```
+Factory Function : 
+```js
+// Factory Function
+salam("pagi")("tono");
+salam("siang")("tini");
+salam("malam")("bambang");
+```
