--- a/4. Closure.md
+++ b/4. Closure.md
@@ -74,3 +74,40 @@ salam("pagi")("tono");
 salam("siang")("tini");
 salam("malam")("bambang");
 ```
+
+# Realworld Closure
+
+contoh Counter :
+
+```js
+let add = function () {
+  let counter = 0;
+  return function () {
+    return ++counter;
+  };
+};
+console.log(add()()); // 1
+```
+`Penjelasan : function didalam add langsung dieksekusi`
+
+atau sama juga dengan :
+
+```js
+let add = (function () {
+let counter = 0;
+return function () {
+    return ++counter;
+};
+})();
+console.log(add()); //1
+```
+
+dengan arrow function : 
+
+```js
+let add = (() => {
+  let counter = 0;
+  return () => ++counter;
+})();
+console.log(add()); //1 
+```
