--- a/4. Closure.md
+++ b/4. Closure.md
@@ -1,8 +1,6 @@
 # Closure
 
-Closure adalah fungsi yang merujuk kepada variabel yang mandiri (bebas). 
-
-Dengan kata lain, fungsi yang di definisikan di dalam closure 'mengingat' lingkungan dimana closure ini didefinisikan. 
+Closure adalah kombinasi dari fungsi dan lingkungan leksikal dimana fungsi itu di deklarasikan. Lingkungan ini terdiri dari lokal variabel yang berada di ruang lingkup yang sama saat closure dibuat.
 
 Alasan menggunakan closure: 
 1. Untuk menggunakan function factory
