--- a/4. Closure.md
+++ b/4. Closure.md
@@ -90,3 +90,10 @@ let add = (() => {
 })();
 console.log(add()); //1 
 ```
+
+Contoh self invoking function :
+```js
+(function () {
+  console.log("hallo");
+})();
+```
