--- a/4. Closure.md
+++ b/4. Closure.md
@@ -97,3 +97,29 @@ Contoh self invoking function :
   console.log("hallo");
 })();
 ```
+
+## Contoh Closure + callback
+
+```js
+<script>
+  function getdata(url, success, error) {
+  fetch(url)
+    .then((res) => {
+    return res.json();
+    })
+    .then((json) => {
+    success(json);
+    });
+  }
+
+  getdata(
+  "https://jsonplaceholder.typicode.com/posts",
+  function (json) {
+    console.log(json);
+  },
+  function (msg) {
+    console.log(msg);
+  }
+  );
+</script>
+```
