--- a/4. Closure.md
+++ b/4. Closure.md
@@ -109,7 +109,10 @@ Contoh self invoking function :
     })
     .then((json) => {
     success(json);
-    });
+    })
+    .catch((message) => {
+    error(message);    
+    );
   }
 
   getdata(
