Update 5. JSON, parse & stringify.md

--- a/5. JSON, parse & stringify.md
+++ b/5. JSON, parse & stringify.md
@@ -42,12 +42,12 @@ Berikut ini beberapa penerapan JSON yang pernah saya temui:
 - dan masih banyak lagi.
 
 ### Struktur Dasar Json
-```
+```json
 {
 "name" : "fajar",
 "from" : "jakarta"
 }
-```js
+```
 
 Ini adalah struktur paling sederhana…
 
