Update 5. JSON, parse & stringify.md

--- a/5. JSON, parse & stringify.md
+++ b/5. JSON, parse & stringify.md
@@ -93,7 +93,7 @@ Contoh lain :
 
 ### Cara Produksi JSON
 
-Pada Javascript, kita bisa gunakan fungsi JSON.stringify() untuk membuat JSON dari objek Javascript. sedangkan untuk mengubah stirng JSON ke javascript object dengan JSON.parse().
+Pada Javascript, kita bisa gunakan fungsi JSON.stringify() untuk membuat JSON dari objek Javascript. sedangkan untuk mengubah string JSON ke javascript object dengan JSON.parse().
 
 ```json
 // objek javascript
