Update 5. JSON, parse & stringify.md

--- a/5. JSON, parse & stringify.md
+++ b/5. JSON, parse & stringify.md
@@ -1,5 +1,34 @@
 # JSON
 
+```js
+
+// JSON File
+let jsonfile =
+    `{"menu": { "id": "file","value": "File","popup": {"menuitem": [{"value": "New","onclick": "CreateNewDoc()"},{"value": "Open","onclick": "OpenDoc()"},{"value": "Close","onclick": "CloseDoc()"}]}}}`
+
+// Objek
+let objek = {
+    name: "Dian",
+    age: 23
+}
+
+console.log(jsonfile);
+
+console.log(objek);
+
+console.log('\n\n\n Converting \n \n \n');
+
+// Parse = Json to Objek
+let newobjek = JSON.parse(jsonfile)
+console.log(newobjek);
+
+// Stringify = Objek to Json
+let newjson = JSON.stringify(objek)
+console.log(newjson);
+
+console.log('\n\n\n Converted now \n\n\n');
+```
+
 #### JSON itu Apa Sih? dan Apa Gunanya dalam Pemrograman? lalu cara menggunakannya bagaimana?
 
 Apa itu JSON?
