--- a/6. Destructuring Assignment.md
+++ b/6. Destructuring Assignment.md
@@ -36,7 +36,7 @@ console.log(y); // 1
 console.log(z); // 2
 ```
 
-## Array destructuring
+# Array destructuring
 
 Basic variable assignment
 ```js
