Update 6. Destructuring Assignment.md

--- a/6. Destructuring Assignment.md
+++ b/6. Destructuring Assignment.md
@@ -218,6 +218,12 @@ const user = {
   }
 };
 
+
+//realid merupakan variabel yang menyimpan nilai id
+function userId({id:realid}) {
+  return realid;
+}
+atau bisa langsung
 function userId({id}) {
   return id;
 }
